data/derived/comb/progs/unify/prog8600.ml.out
Characters 490-504:
  | GoldTimes   m4	    -> (eval(m4,x,y))*(1+.sqrt(5))/.2.0;;
                          ^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
